# fast-api-sqlite-application

./: .gitignore  pyproject.toml
app/: db.py  main.py  routes.py
core/: db_common.py  models.py  repositories.py
features/tasks/: models.py  repositories.py  routes.py  schemas.py  services.py
tests/: assert_helpers.py  test_configuration.py  test_tasks.py
tests/factories/: model_factory.py  task_factory.py
