[tool.poetry]
name = "fast-api-sqlite-application"
version = "0.1.0"
description = ""
authors = ["Clement Dejoie <clement.dejoie@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_sqlite_application"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
SQLAlchemy = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
