[tool.poetry]
name = "fast-api-sqlite-application"
version = "0.1.0"
description = ""
authors = ["Clement Dejoie <clement.dejoie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
SQLAlchemy = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
httpx = "^0.23.3"
faker = "^18.3.1"
sqlalchemy-utils = "^0.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
